<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/groupGeneralTitle">
        <menu>
            <group>
                <item
                    android:id="@+id/aboutappFragment"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/abouttheappTitle" />
            </group>
        </menu>

    </item>

    <item android:title="@string/groupCommunicateTitle">
        <menu>
            <group>
                <item
                    android:id="@+id/contactmeFragment"
                    android:icon="@android:drawable/ic_dialog_email"
                    android:title="@string/contactmeTitle" />
            </group>
        </menu>
    </item>


</menu>